# plcd

./: LarkAulaProcessadorT.py  Livro1.xlsx  README.md  dataset2yaml.py  dsplot_bar.py  ex1-dash.csv  exemplo.csv3  final.yml  grammarlarkTutorial.py  out.html  pyproject.toml  x.txt
1014/: plot_lifeExp.py
1015/: LarkAula.py  csv_Martim.py  csv_Martim2.py  csv_parser_json.py
1021/: 1021-exemplo.anb  ANB_martim_sol.py  ANB_parser.txt  anb_parser.py  out.dot
1022/: _.json  familia.yaml  familia.yaml.dot  out3.dot  simpsons_tree.dot  sons_dot.py  test.py  x.dot
1028/: 1028.py  CAE.txt  CAE_REV_3.xml  SIC-PT.txt  SIC-PT_seccao.html  SIC-PT_seccao.txt  SIC.html  makefile  makefile.unknown  out.latex  seccao.py
1028/SIC-PT/: 0-industrial-codes-1.html  index.html  sitemap.json
1104/: exemplo.txt  listacompras.py  parser_compras.py
1111/: calculadora.py  exemplo.txt
1112/: 1211.py  SIC-PT2.txt  mini.txt  out.txt
1119/: c scale.midi  midi.py
1129/: 2911.py  ents.py  ents2.py  maias.txt
1209/: makefile  out  out.txt  processa_f8.py  v  verbopt.freq
projeto/: anb_projeto.py  anb_projeto_0.py  exemplo.txt  exmini.txt  myscript.py  output.html  output.md  teste.py  teste_dinis.py
projeto_spacy/: inicio.py  mini.txt
