[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dataset2yaml"
authors = [
    {name = "Rúben Carvalho", email = "----------"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.5"
version = "0.0.1"
description = "Conversor"
dependencies = ["pandas", "jjcli"]

[project.scripts]
dataset2yaml = "dataset2yaml:main"